--- a/scr/makefile
+++ b/scr/makefile
@@ -1,5 +1,5 @@
 all: main2.o Orbital.o Func.o xc_potential.o hartree.o Poisson.o Integrand.o gauss.o scf.o
-	g++ main2.o scf.o Orbital.o Func.o xc_potential.o hartree.o Poisson.o Integrand.o gauss.o   -o   atomdft -L/opt/etsf/lib -lgsl -lopenblas -lm -lxc -std=c++11
+	g++ main2.o scf.o Orbital.o Func.o xc_potential.o hartree.o Poisson.o Integrand.o gauss.o -pg  -o   atomdft -L/opt/etsf/lib -lgsl -lopenblas -lm -lxc -std=c++11
 
 main2.o: main2.cpp Orbital.h
 	g++  main2.cpp -c -I. -I/opt/etsf/include -std=c++11
